# wm-computational-limits

./: .gitignore  README.md  hello.py  pyproject.toml  run_wm.py
configs/: ref_n_back.yaml  sample_conditional_config.yaml  td_manipulation.yaml  transformer_hparam_sweep.yaml
docs/: NNSIGHT_USAGE.md
notebooks/: best_worst_models.py  dataset-batch-token-freq.ipynb  generalization_behavior.ipynb  get_wandb_data.py  linear_interpolation_weights.ipynb  peek_embeddings.ipynb  plot_td_role_generalization.ipynb  wandb_api.ipynb
notebooks/2-vs-3-replicate/: plot_training_curve-compare_mask_unmask.ipynb  plot_training_curve.ipynb
notebooks/compare_data_distribution/: compare_data_dist.ipynb
notebooks/generalization_behavior/: generalization_plot.ipynb
notebooks/generalization_behavior/challenge_set/: compare_sparsity_and_scaling.ipynb
notebooks/generalization_behavior/challenge_set/with_temporal_dep/: download_td_sweeps.ipynb  plot_records_runs.ipynb
notebooks/scaling/: 2-vs-3.ipynb  plot_training_curve-cogsci2025.ipynb  plot_training_curve-compare_mask_unmask.ipynb  plot_training_curve.ipynb
notebooks/scaling/sparsity_comparison/: compare_sparsity_and_scaling.ipynb
notebooks/scaling/sparsity_comparison/sweeps/: compare_sweeps.ipynb
scripts/: run_sweep copy.sh  run_sweep copy1.sh  run_sweep copy2.sh  run_sweep.sh  run_sweep_finetuning.sh  run_sweep_pretraining.sh  template_run_sweep.sh
workingmem/: __init__.py  __main__.py  utils.py
workingmem/model/: __init__.py  interface.py  model.py  modeling_utils.py  trainer.py
workingmem/task/: __init__.py  interface.py
workingmem/task/SIR/: SIR.py  __init__.py  __main__.py
