[project]
name = "wm_limits"
version = "0.1.0"
description = "Investigating the nature of working memory limitations using computational modeling."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dacite>=1.9.2",
    "einops>=0.8.1",
    "matplotlib>=3.10.1",
    "numpy>=2.0.2",
    "submitit>=1.5.2",
    "torch>=2.6.0",
    "transformer-lens>=2.11.0",
    "transformers>=4.48.3",
    "tyro>=0.9.16",
]

[dependency-groups]
dev = [
    "ipython>=8.33.0",
    "pdoc>=15.0.1",
]
