[project]
name = "wm_limits"
version = "0.1.0"
description = "Investigating the nature of working memory limitations using computational modeling."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dacite>=1.9.2",
    "einops>=0.8.1",
    "matplotlib>=3.10.1",
    "nnsight>=0.4.8",
    "numpy>=2.0.2",
    "scipy>=1.15.2",
    "submitit>=1.5.2",
    "torch>=2.6.0",
    "transformer-lens>=2.11.0",
    "transformers>=4.48.3",
    "tyro>=0.9.16",
]

[dependency-groups]
dev = [
    "anywidget>=0.9.16",
    "ipykernel>=6.29.5",
    "ipython>=8.33.0",
    "jupyter>=1.1.1",
    "pdoc>=15.0.1",
    "plotly[express]>=6.0.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]

[tool.setuptools]
packages = ['workingmem']

[tool.ruff]
# line-length = 90